<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hosam.nora.MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num1"
                android:fontFamily="monospace"
                android:textSize="50px"/>
            <EditText
                android:id="@+id/num1Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num2"
                android:fontFamily="monospace"
                android:textSize="50px"/>
            <EditText
                android:id="@+id/num2Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/resultTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:text="0.00"
            android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center">
                <Button
                    android:id="@+id/plusBtn"
                    android:text="@string/Plus"
                    android:fontFamily="monospace"
                    android:fontFeatureSettings="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/minseBtn"
                    android:text="@string/Minse"
                    android:fontFamily="monospace"
                    android:fontFeatureSettings="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/byBtn"
                    android:text="@string/By"
                    android:fontFamily="monospace"
                    android:fontFeatureSettings="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/divBtn"
                    android:text="@string/Div"
                    android:fontFamily="monospace"
                    android:fontFeatureSettings="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center">

            <Button
                android:id="@+id/displayRpt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/displayBtn" />
        </LinearLayout>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>
